--- a/app/views/layouts/social_life.html.erb
+++ b/app/views/layouts/social_life.html.erb
@@ -11,5 +11,17 @@
 <body>
 	<center><%= image_tag '/images/logo.png' %></center>
 	<%= yield %>
+	
+	<script type="text/javascript">
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+	try {
+	var pageTracker = _gat._getTracker("UA-2899967-5");
+	pageTracker._trackPageview();
+	} catch(err) {}</script>
+	
+	
 </body>
 </html>
