--- a/app/views/social_life/index.html.erb
+++ b/app/views/social_life/index.html.erb
@@ -1,6 +1,6 @@
 <center>
 	<h1>some real fucking fun. <h3>we're lining up a venue for the inaugural event</h3></h1>
 	    <div style="width:350px; border: 1px solid #aaa; padding:108px 0 108px 0">
-	    	you'll be invited shortly
+	    	<span style="color:#222">you'll be invited shortly</span>
 	    </div>
  </center>
