--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,4 @@
+<span style="float:right"><%= image_tag @event.picture_location %></span>
 <p>
   <b>Title:</b>
   <%=h @event.title %>
@@ -10,7 +11,9 @@
 
 <p>
   <b>Location:</b>
-  <%=h @event.location_id %>
+  <%=h @event.location.name %>
+
+
 </p>
 
 <p>
@@ -25,4 +28,6 @@
 
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<%= link_to 'Back', events_path %> |
+<%= link_to "public view", public_event_path(@event) %> |
+<%= link_to "email this", email_event_path(@event) %>
