--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,15 +5,20 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Contacts: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'scaffold', 'styles' %>
 </head>
 <body>
 <div id="nav">
 	<%= link_to "home", root_path %> | <%= link_to "events", events_path %> | <%= link_to "locations", locations_path %> | <%= link_to "users", users_path %> | <%= link_to "contacts", contacts_path %>
 </div>
 <p style="color: green"><%= flash[:notice] %></p>
+<div id="page">
+	<%= yield  %>
+</div>
 
-<%= yield  %>
-
+<div id="footer">
+	<%= render :partial => 'users/user_bar' %>
+	
+</div>
 </body>
 </html>
