--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -14,10 +14,12 @@ a:hover {color:#000;}
 
 a:visited {color:#30ff00;}
 
-div#page{margin:10pt 10pt 100pt 10pt;}
+div#page{margin:10pt 10pt 100pt 10pt; padding:20px;}
 div#footer {
 	background: #333;
 	position: bottom;
 	padding: 50px
 }
+.even {background: #eee; color:#333;}
+.odd {background: #555; color:#fff;}
 
