--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<span style="float:right"><%= image_tag @event.picture_location %></span>
+<span style="float:right"><%= image_tag @event.image %></span>
 <p>
   <b>Title:</b>
   <%=h @event.title %>
