--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -30,4 +30,4 @@
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %> |
 <%= link_to "public view", public_event_path(@event) %> |
-<%= link_to "email this", email_event_path(@event) %>
+<%= link_to "email this", setup_event_email_path(@event) %>
