--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,12 +5,20 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title> <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold', 'styles' %>
+  <%= stylesheet_link_tag 'styles' %>
+  <%= javascript_include_tag :defaults %>
+
 </head>
 <body>
-<div id="nav">
-	<%= link_to "home", root_path %> | <%= link_to "events", events_path %> | <%= link_to "locations", locations_path %> | <%= link_to "users", users_path %> | <%= link_to "contacts", contacts_path %>
-</div>
+<div id="nav" style="margin-left:10px">
+	<%= link_to current_user.login, edit_user_path(current_user) %>
+	<%#= link_to_current_user :content_method => :login %> /
+  <%= link_to "signout", logout_path, { :title => "Log out" }    %> /
+	<%= link_to "home", root_path %> /
+	<%= link_to "events", events_path %> /
+	<%= link_to "locations", locations_path %> /
+	<%= link_to "users", users_path %> /
+	<%= link_to "contacts", contacts_path %></div>
 <p style="color: green"><%= flash[:notice] %></p>
 <div id="page">
 	<%= yield  %>
